--- a/build.gradle
+++ b/build.gradle
@@ -18,8 +18,10 @@ dependencies {
     testCompile 'io.cucumber:cucumber-spring:' + cucumberVersion
     testCompile group: 'io.rest-assured', name: 'rest-assured', version: '4.3.0'
     testCompile group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: '2.2.5.RELEASE'
-    testCompile group: 'com.vimalselvam', name: 'cucumber-extentsreport', version: '3.0.2'
-    //testCompile group: 'com.aventstack', name: 'extentreports', version: '3.1.2'
-    testCompile group: 'com.aventstack', name: 'extentreports-cucumber4-adapter', version: '1.0.10'
+
+//Will uncomment for extent report implementation
+//    testCompile group: 'com.vimalselvam', name: 'cucumber-extentsreport', version: '3.0.2'
+//    testCompile group: 'com.aventstack', name: 'extentreports', version: '3.1.2'
+//    testCompile group: 'com.aventstack', name: 'extentreports-cucumber4-adapter', version: '1.0.10'
 
 }
