--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -20,9 +20,9 @@ jobs:
       uses: actions/setup-java@v1
       with:
         java-version: 1.8
-    - name: Grant execute permission for gradlew
-      run: chmod +x gradlew
+#     - name: Grant execute permission for gradlew
+#       run: chmod +x gradlew
     - name: Build with Gradle
-      run: ./gradlew build
+      run: chmod +x ./gradlew build
     - name: Test with Gradle
-      run: ./gradlew test
+      run: chmod +x ./gradlew build
