--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,6 @@
 .mtj.tmp/
 
 # Package Files #
-*.jar
 *.war
 *.nar
 *.ear
@@ -25,3 +24,4 @@ target
 .gradle
 build
 
+/src/test/java/com/slack/api/runner/Test.java
